--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <base href="/">
-  <title>Ultimate Angular</title>
+  <title>Angular Starter</title>
   <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
